# zephpost

./: Cargo.toml  README.md  build.rs
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  commit_moderation.yml  test.yml
src/: main.rs  smtp.rs  utils.rs
src/smtp/: command.rs  error.rs  server.rs
