[package]
name = "zephpost"
version = "0.1.0-alpha.0"
authors = [
    "KATO Hayate <dev@hayatek.jp>",
]
edition = "2024"
rust-version = "1.85"
description = "An MTA/MDA written in Rust"
documentation = ""
readme = "README.md"
homepage = ""
repository = "https://github.com/hayatek-jp/zephpost"
license = "GPL-3.0"
keywords = [
    "mta",
    "mda",
    "smtp",
]
categories = [
    "command-line-utilities",
    "email",
    "network-programming",
]
exclude = []
publish = false

[dependencies]
bpaf = { version = "0.9.18", features = ["autocomplete", "derive"] }
sysexits = "0.9.0"
thiserror = "2.0.12"
tokio = { version = "1.44.0", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time", "tracing"] }

[dev-dependencies]

[features]
default = ["colored-cli"]
colored-cli = ["bpaf/bright-color"]

[profile.release]
strip = true
overflow-checks = true
lto = true
panic = "abort"

